# WEBSCRAPING

./: mercadolivre.py  pyproject.toml
coleta/: data.jsonl  pyproject.toml
coleta/coleta/: settings.py
coleta/coleta/spiders/: mercadolivre.py
